# rikanos

./: .gitignore  Makefile  README.md  make-image.sh  qemu-run.sh  run_cpp_loader.sh  run_mikanos.sh  write-object-to.sh
OVMFs/: OVMF_VARS.fd
bootloader/: Cargo.toml  rust-toolchain.toml
bootloader/src/: main.rs
kernel/: Cargo.toml  build.rs  kernel.elf  rust-toolchain.toml  x86_64-unknown-rikan-elf.json
kernel/asm/: asmfunc.asm
kernel/src/: ascii_font.rs  console.rs  error.rs  font.rs  graphics.rs  lib.rs  logger.rs  main.rs  memory_map.rs  mouse.rs  paging.rs  pci.rs  segment.rs  usb.rs
kernel/src/graphics/: mod.rs
kernel/src/utils/: fixed_vec.rs  mod.rs  static_malloc.rs
kernel/usb/: .gitignore  Makefile  lib.cpp  logger.cpp
