[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linked_list_allocator = "0.10.5"
log = "0.4.21"
uefi = { version = "0.28.0", features = ["logger", "panic_handler"] }
uefi-raw = "0.5.2"
